tests/valid_programs/basics/array_len.duck
fn main() {
    [1, 2, 3].len().to_string()->std::io::println();
    (&[1, 2, 3, 20]).len().to_string()->std::io::println();
}
