tests/errors/references/assign_to_const_array.duck
fn main() {
    const arr = [1, 2, 3];
    arr[0] = 20;
}
